# SaveVault

./: .gitignore  .prettierrc  README.md  cloud_location.db  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  cloud_folder.db  cloud_folder_database.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cmds.rs  files_manager.rs  folder_manager.rs  lib.rs  main.rs
src-tauri/src/cfg/: db.rs
src-tauri/src/db/: config.rs  db_manager.rs  mod.rs
src-tauri/src/db/cloud_location/: config.rs  queries.rs
src-tauri/src/db/games/: config.rs  mod.rs  queries.rs
src-tauri/src/models/: game.rs
src-tauri/src/services/: files_service.rs  game_service.rs  metadata_service.rs  mod.rs
src/assets/TD/: games.json
src/components/game-item/: GameItem.css  GameItem.tsx
src/components/title-bar/: TitleBar.css  TitleBar.tsx
src/components/title-bar/title-bar-button/: TitleBarButton.css  TitleBarButton.tsx
src/models/: Game.tsx
src/pages/home/: Home.css  Home.tsx
src/pages/settings/: Settings.css  Settings.tsx
src/services/: gameService.ts  settingsService.ts
src/services/GameService/: GameService.data.mock.ts  GameService.test.ts  GameService.ts
src/services/SettingsService/: SettingsService.mock.ts  SettingsService.test.ts  SettingsService.ts
src/utils/: config.ts
